# i3systems_assignment_v2

./: README.md  config.py  main.py  pyproject.toml
data/processed/: valid.csv
src/: process.py  split.py
tfbert/: dataset.py  loss.py  medical_data.py  metrics.py  models.py  utils.py
