[tool.poetry]
name = "i3systems_assignment_v2"
version = "0.1.0"
description = ""
authors = ["adimyth <mishraaditya6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.3.0"
transformers = "3.0.0"
tqdm = "^4.58.0"
attrdict = "^2.0.1"
sklearn = "^0.0"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.812"
pandas = "1.1.0"
nltk = "^3.5"
isort = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
